--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
 </head>
 <body>
-    <header>
-        <h1>Fiona's website POG</h1>
+    <header class="row">
+        <h1> Fiona's website POG </h1>
     </header>
 
     <main class="row">
         <section class="column">
-            <h2>About me</h2>
+            <h2>Pokemon</h2>
+            <a href="http://pokemon.com">
+                Visit Website
+            </a>
         </section>
 
         <section class="column">
@@ -28,7 +36,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="row">
         <h6>Copyright & Contact Info goes here</h6>
     </footer>
 </body>
